tests/snapshots/snapshot_tests__bash_generator_snapshot.snap
---
source: tests/snapshot_tests.rs
assertion_line: 146
expression: output
---
_test()
{
  local cur prev opts
  COMPREPLY=()
  cur="${COMP_WORDS[COMP_CWORD]}"
  prev="${COMP_WORDS[COMP_CWORD-1]}"

  opts="--verbose -v"

  COMPREPLY=($(compgen -W "${opts}" -- ${cur}))
}

complete -o bashdefault -o default -o nospace -F _test test
