tests/snapshots/snapshot_tests__zsh_generator_with_descriptions_snapshot.snap
---
source: tests/snapshot_tests.rs
assertion_line: 38
expression: output
---
#compdef _hcl hcl

_hcl() {
  local -a options

  options+=('-v[Enable verbose mode]')
  options+=('--verbose[Enable verbose mode]')
  _arguments -s -S $options
}

_hcl "$@"
